<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/Choose"/>
<MultiAutoCompleteTextView 
	android:id="@+id/tagAutoCompleteBox" 
	android:layout_height="wrap_content" 
	android:layout_width="match_parent" 
	android:text="Enter a Tag">
	</MultiAutoCompleteTextView>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="2dp">
	<Button 
		android:text="@string/search_text" 
		android:id="@+id/searchButton" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
		</Button>
	<Button 
		android:text="@string/cancel_text" 
		android:id="@+id/cancel_button" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
		</Button>
	</LinearLayout>
<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:padding="4dp">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="2dp">
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/location"
			android:textSize="18sp">
		</TextView>	
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/location_small"
			android:textSize="12sp">
		</TextView>		
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="2dp"
		android:gravity="right">
		<CheckBox
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/check_location">
		</CheckBox>
	</LinearLayout>
</LinearLayout>
<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:padding="4dp">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="2dp">
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/person"
			android:textSize="18sp">
		</TextView>	
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/person_small"
			android:textSize="12sp">
		</TextView>	
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:padding="2dp"
		android:gravity="right">
		<CheckBox
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/check_person">
		</CheckBox>
	</LinearLayout>
</LinearLayout>
</LinearLayout>